Risk - Yura Mamyrin (yura@yura.net)

CURRENT VERSION:

	Risk Game:	1.1.1.0
	 * Save:	8
	 * Network:	9

	Android		11
	Flash GUI:	2
	Swing GUI:	2
	Simple GUI:	1.1.1.1
	Increment1GUI:	1.1.1.1
	CommandLine:	1.0.4.1

1.1.1.0

	when you must trade, the "End Trade" button becomes disabled/hidden
	can have different circle sizes on maps
	the map Editor can save jpeg files as well as png for the img pic

	Android 11 donate button added to main menu
		   circles on map can be different size for different maps
		   capitals look a bit better
	Android 10 stats graph added
	Android 9 some maps fail to load on Android
		  when a map needs to be updated then it shows the download icon instead of the play icon
		  if a map does not download fully it does not come up in the list of maps
	Android 8 fixed - WARNING: trying to set a transparent color: 0 (going from mainmenu to newgame)
		  DONE - when map is loading, should show a loading screen
		  DONE - attack and move screen need to take into account dpi when drawing the countries
		  country names added to move and attack screen
		  fixed - Text in cards dialog is not very good and does not mention "trade 3 same or 3 different cards"
		  in fixed cards rules the cards dialog shows you have many armies you will get for a particular trade
	Android 7 handle OutOfMemoryError much better when loading the map
		  nice theme added for main menu buttons
		  nice theme added for cards
		  better error message in MapStore when it fails to connect
	Android 6 DONE - when you are in "MUST TRADE" mode the "Go" button should not say "End Trade" and the cards button should be green
		  DONE - something fun for the end of the game has not been added to the Android version
		  fixed - java.lang.NoSuchFieldException: btn_circle
	Android 5 save game works on api < 9
	Android 4 DONE - Go> Button needs to be green and nice
		  DONE - [Cards] button needs to be nice
		  DONE - [Hint] button needs to be nice
	Android 3 FileChooser nullpointer fix